Fix packaging problem

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include lightvolume.h
 include lightvolume.cpp
+include lightvolume_build.py
 include README.rst
 include LICENSE
 recursive-include visibility *.hpp LICENSE *.md
