--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include lightvolume.cpp
 include lightvolume_build.py
 include README.rst
 include LICENSE
-recursive-include visibility *.hpp LICENSE *.md
+recursive-include vendor/visibility *.hpp LICENSE *.md
